@@ -1166,7 +1166,7 @@ public class JabRefPreferences {
         defKeyBinds.put("Forward", "alt RIGHT");
         defKeyBinds.put("Import into current database", "ctrl I");
         defKeyBinds.put("Import into new database", "ctrl alt I");
-        defKeyBinds.put(FindUnlinkedFilesDialog.ACTION_COMMAND, "");
+        defKeyBinds.put(FindUnlinkedFilesDialog.ACTION_KEYBINDING_ACTION, "shift F7");
         defKeyBinds.put("Increase table font size", "ctrl PLUS");
         defKeyBinds.put("Decrease table font size", "ctrl MINUS");
         defKeyBinds.put("Automatically link files", "alt F");
