@@ -3,6 +3,7 @@
     - Feature: Trim journal names before looking up the abbreviation
     - Minor fixes regarding the status output of marking/unmarking entries
     - Internal default key bindings are honored again
+    - Default key binding for "Find unlinked files" is "shift F7"
 2.11 beta 2
     - Feature: Option to clean URLs generated by Google (patch #204)
     - Fix for bug #1272: JabRef now launches on Mac OS X
